--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,8 @@
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Oxygen Mono', monospace;
   font-weight: 400;
   line-height: 1.666;
-  background: #c0d2d4;
+  background: #4c4c4c;
   color: #555;
 }
 
@@ -17,7 +17,7 @@ h1 {
 
 h1 span {
   padding: 5px 15px;
-  background: #2ec2b0;
+  background: #fddb3a;
 }
 
 .dictionary {
@@ -28,7 +28,7 @@ h1 span {
   max-width: 90%;
 }
 
-.dictionary > .term {
+.dictionary>.term {
   text-align: center;
   max-width: 20rem;
   margin-bottom: 3rem;
@@ -39,7 +39,7 @@ h1 span {
   transition: all 100ms ease-in-out;
 }
 
-.dictionary > .term > dt {
+.dictionary>.term>dt {
   margin-bottom: 1rem;
 }
 
