--- a/public/styles.css
+++ b/public/styles.css
@@ -1,102 +1,127 @@
 body {
-  font-family: 'Oxygen Mono', monospace;
-  font-weight: 400;
-  line-height: 1.666;
-  background: #4c4c4c;
-  color: #555;
+	font-family: 'Oxygen Mono', monospace;
+	font-weight: 400;
+	line-height: 1.666;
+	background: #4c4c4c;
+	color: #555;
 }
 
 h1 {
-  font-weight: 900;
-  font-size: 500%;
-  text-align: center;
-  margin-top: 4rem;
-  color: #fff;
-  line-height: 1.2;
+	font-weight: 900;
+	font-size: 500%;
+	text-align: center;
+	margin-top: 4rem;
+	color: #fff;
+	line-height: 1.2;
 }
 
 h1 span {
-  padding: 5px 15px;
-  background: #fddb3a;
+	padding: 5px 15px;
+	background: #fddb3a;
 }
 
 .dictionary {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
-.dictionary > .term {
-  text-align: center;
-  max-width: 20rem;
-  margin-bottom: 3rem;
+.dictionary>.term {
+	text-align: center;
+	max-width: 20rem;
+	margin-bottom: 3rem;
+	padding: 0;
+	border-radius: 3px;
+	box-shadow: 0 2px 0 rgba(0, 0, 0, 0.05), 0 5px 20px rgba(0, 0, 0, 0.1);
+	background-color: #fff;
+	transition: all 100ms ease-in-out;
+}
+
+.emoji-content{
   padding: 2rem;
-  border-radius: 3px;
-  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.05), 0 5px 20px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  transition: all 100ms ease-in-out;
-}
-@media only screen and (max-width: 986px) {
-.term {
-  min-width: 100%;
-}
 }
 
-.dictionary > .term > dt {
-  margin-bottom: 1rem;
+@media only screen and (max-width: 986px) {
+	.term {
+		min-width: 100%;
+	}
+}
+
+.dictionary>.term>dt {
+	margin-bottom: 1rem;
 }
 
 dt {
-  color: #2ec2b0;
-  line-height: 1;
+	color: #2ec2b0;
+	line-height: 1;
 }
 
 dt span {
-  font-size: 200%;
-  font-weight: 900;
+	font-size: 200%;
+	font-weight: 900;
 }
 
 .emoji {
-  margin: 0 auto 20px;
-  display: block;
-  font-size: 400%;
+	margin: 0 auto 20px;
+	display: block;
+	font-size: 400%;
 }
 
 dd {
-  font-size: 92.5%;
-  margin-left: 0;
+	font-size: 92.5%;
+	margin-left: 0;
 }
 
 dd dt {
-  margin-top: 1rem;
-  margin-bottom: 0.25rem;
-  font-weight: 600;
-  font-size: inherit;
+	margin-top: 1rem;
+	margin-bottom: 0.25rem;
+	font-weight: 600;
+	font-size: inherit;
 }
 
 dd dl {
-  font-size: 90%;
-  margin: 1rem auto 0 auto;
-  letter-spacing: 0.33px;
-  max-width: 15rem;
+	font-size: 90%;
+	margin: 1rem auto 0 auto;
+	letter-spacing: 0.33px;
+	max-width: 15rem;
 }
 
 dd dl .term {
-  margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
-
 
 @media only screen and (max-width: 800px) {
-  .dictionary {
-    justify-content: center;
-  }
-  
-.searchbox {
-  width: 100%;
+	.dictionary {
+		justify-content: center;
+	}
+	.searchbox {
+		width: 100%;
+	}
+	.searchbox input[type="text"] {
+		width: 40%;
+		margin: 0 auto;
+	}
 }
-  
-.searchbox input[type="text"] {
-  width: 40%;
-  margin: 0 auto;
 
+.is-relative{
+  position: relative;
+}
+
+.clipboard{
+  width: 100%;
+  text-align: right;
+  padding-top: 15px;
+  padding-right: 15px;
+}
+
+.clipboard > a{
+  font-size: 0.8rem;
+  fill: grey;
+}
+
+.clipboard > a:hover{
+  font-size: 0.8rem;
+  text-decoration: underline;
+  cursor: pointer;
+  fill: black;
 }
